# mercury

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
mercury/: Cargo.toml  PUBLISHING.md  README.md  TESTING.md
mercury-cli/: Cargo.toml
mercury-cli/src/: main.rs
mercury-derive/: Cargo.toml
mercury-derive/src/: lib.rs
mercury/src/: analyzer.rs  codec_gen.rs  codegen.rs  error.rs  lib.rs  parser.rs  scanner.rs  serde_attrs.rs  types.rs  writer.rs
mercury/tests/: integration_test.rs
