[package]
name = "mercury-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macro for marking Rust types for PureScript code generation"
keywords = ["purescript", "codegen", "macro", "ffi", "procedural-macro"]
categories = ["development-tools", "web-programming"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
