[package]
name = "cargo-mercury"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Automatically generate PureScript types and Argonaut codecs from Rust"
keywords = ["purescript", "codegen", "ffi", "typescript", "functional"]
categories = ["development-tools", "web-programming"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
